--- a/install/Brewfile
+++ b/install/Brewfile
@@ -11,6 +11,18 @@ brew "eza" # improved ls
 brew "bat" # improved cat
 brew "mackup" # back up Mac app settings. glitchy on newer versions
 brew "tlrc" # tldr on commands
+brew "yazi"
+brew "ffmpeg"
+brew "sevenzip"
+brew "jq"
+brew "poppler"
+brew "fd"
+brew "ripgrep"
+brew "fzf"
+brew "zoxide"
+brew "resvg"
+brew "imagemagick"
+brew "font-symbols-only-nerd-font"
 
 ### casks
 
